# america-news

./: README.md
backend/america-news-server/: Cargo.toml  README.md
backend/america-news-server/src/: Hello.rs  main.rs
backend/hello-rocket/: Cargo.toml  README.md
backend/hello-rocket/src/: main.rs
frontend/: .gitignore  package-lock.json  package.json  rollup.config.js
frontend/public/: index.html
frontend/src/: App.svelte  NavBar.svelte  main.js
frontend/src/app/: App.svelte  Modal.svelte  NavBar.svelte  logins.js
frontend/src/app/routes/: SignIn.svelte
